Fixing the issues occuring on small screens

--- a/netbox/static/netbox/css/base.scss
+++ b/netbox/static/netbox/css/base.scss
@@ -113,9 +113,6 @@ h3.title {
     font-family: $serif-bold;
     font-size: 2.2rem;
     font-weight: bold;
-    @media (max-width: $media-medium) {
-      font-size: 1.5rem;
-    }
   }
 
   &-logo {
@@ -141,6 +138,14 @@ h3.title {
   }
 }
 
+.navbar-top {
+  .navbar-brand {
+    @media (max-width: $media-medium) {
+      font-size: 1.5rem;
+      padding: 5px;
+    }
+  }
+}
 
 .navbar-default .navbar-nav {
   font-size: 18px;
